--- a/css/base.css
+++ b/css/base.css
@@ -37,84 +37,65 @@ body {
 
 .banner{
 	position: relative;
-	width: 1600px;
+	width: 100%;
 }
 
-.image{
-	display: flex;
-	overflow-x: scroll;
-	border: 1px solid #999;
+.navbar{
+	background-color: lightgray;
 }
 
-.image img{
-	width: 800px;
-	height: 500px;
-	flex-shrink: 0;
+.swiper {
+    width: 100%;
+    height: 400px;
 }
 
-.sphere{
-	width: 10px;
-	height: 10px;
+.food_image{
+	width: 350px;
+	height: 350px;
+	object-fit: cover;
+}
+
+.accordion-button {
+  background-color: #ffcbb3;
+  font-weight: bold;
+}
+
+.accordion-button:not(.collapsed) {
+  background-color: #ffcbb3;
+  color: #000;
+  box-shadow: none;
+}
+
+.accordion-button::after {
+  display: none;
+}
+
+.accordion-button:focus {
+  box-shadow: none;
+}
+
+.accordion-body {
+  background-color: #FFEFD5;
+}
+
+.swiper-slide img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.restaurant_img{
+	width: 200px;
+	height: 200px;
 	border-radius: 50%;
-	background-color: #d3d3d3;
-	margin-right: 10px;
 }
 
-.sphere.active{
-	background-color: blue;
+.restaurant_img img{
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 
-.spheres{
-	position: absolute;
-	left: 50%;
-	bottom: 15px;
-	transform: translateX(-50%);
-	display: flex;
-	gap: 10px;
-}
-
-.corona{
-	display: flex;
-	flex-direction: column;
-	position: relative;
-	width: 800px;
-	margin: 0 auto;
-}
-
-.puldown{
-	background-color: #FFC7AF;
-	display: block;
-	width: 300px;
-	text-align: center;
-	margin: 10px auto;
-}
-
-.puldown_content{
-	display: none;
-	padding: 10px;
-}
-
-.introduction{
-	width: 1000px;
-	margin: 50px auto;
-}
-
-.signature_food{
-	display: flex;
-	gap: 30px;
-	align-items: center;
-}
-
-.signature_food img{
-	width: 400px;
-	height: auto;
-	border-radius: 8px;
-}
-
-.food_text{
-	flex: 1;
-}
-
-.food_text{
-	line-height: 1.8;
+footer{
+	background-color: darkgray;
 }
