--- a/css/base.css
+++ b/css/base.css
@@ -35,6 +35,10 @@ body {
 	box-sizing: border-box;
 }
 
+.site_wrapper{
+	max-width: 1100px;
+}
+
 .banner{
 	position: relative;
 	width: 100%;
@@ -53,11 +57,11 @@ body {
 	width: 350px;
 	height: 350px;
 	object-fit: cover;
+	justify-content: flex-start;
 }
 
 .accordion-button {
   background-color: #ffcbb3;
-  font-weight: bold;
 }
 
 .accordion-button:not(.collapsed) {
@@ -78,6 +82,10 @@ body {
   background-color: #FFEFD5;
 }
 
+.accordion-item{
+	border: none;
+}
+
 .swiper-slide img {
     width: 100%;
     height: 100%;
@@ -88,11 +96,23 @@ body {
 	width: 200px;
 	height: 200px;
 	border-radius: 50%;
+	margin: auto;
+}
+
+.restaurant_img p {
+  font-size: 0.7rem;
+  margin: 0;
+}
+
+.restaurant_img i {
+  font-size: 0.9rem;
+  margin-right: 4px;
+  vertical-align: middle;
 }
 
 .restaurant_img img{
-	width: 100%;
-	height: 100%;
+	width: 80%;
+	height: 80%;
 	object-fit: cover;
 }
 
