--- a/css/base.css
+++ b/css/base.css
@@ -53,7 +53,29 @@ body {
     height: 400px;
 }
 
-.food_image{
+.swiper-scrollbar {
+  width: 400px !important;
+}
+
+@media (max-width: 767px) {
+  .swiper-button-prev {
+    left: -15px;
+  }
+
+  .swiper-button-next {
+    right: -15px;
+  }
+}
+
+@media(max-width:767px){
+	.swiper-slide{
+		width: 100% !important;
+		height: 100% !important;
+		margin: 0 auto !important;
+	}
+}
+
+.food_image {
 	width: 350px;
 	height: 350px;
 	object-fit: cover;
@@ -118,4 +140,17 @@ body {
 
 footer{
 	background-color: darkgray;
+}
+
+.contents{
+	opacity: 0;
+	visibility: hidden;
+	transition: all 1s;
+	transform: translateY(150px);
+}
+
+.is-active{
+	opacity: 1;
+	visibility: visible;
+	transform: translateY(0);
 }
