--- a/css/base.css
+++ b/css/base.css
@@ -35,10 +35,6 @@ body {
 	box-sizing: border-box;
 }
 
-.site_wrapper{
-	max-width: 1100px;
-}
-
 .banner{
 	position: relative;
 	width: 100%;
@@ -51,6 +47,13 @@ body {
 .swiper {
     width: 100%;
     height: 400px;
+	position: relative;
+}
+
+.swiper-slide img.banner_image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .swiper-scrollbar {
@@ -58,25 +61,50 @@ body {
 }
 
 @media (max-width: 767px) {
+  .swiper {
+    height: 250px;
+	overflow: hidden;
+  }
+
+  .swiper-slide {
+    display: flex;
+    justify-content: center;
+  }
+
+  .swiper-slide img.banner_image {
+	height: 95%;
+}
+
+  .swiper-slide {
+    padding: 0 8%;
+  }
+
   .swiper-button-prev {
-    left: -15px;
+    left: -10px;
   }
 
   .swiper-button-next {
-    right: -15px;
+    right: -10px;
+  }
+
+  .swiper-button-prev,
+  .swiper-button-next {
+    width: 50px;
+    height: 50px;
+  }
+
+  .swiper-button-prev::after,
+  .swiper-button-next::after {
+    font-size: 20px;
+  }
+
+  footer{
+	font-size: 0.5rem;
   }
 }
 
-@media(max-width:767px){
-	.swiper-slide{
-		width: 100% !important;
-		height: 100% !important;
-		margin: 0 auto !important;
-	}
-}
-
 .food_image {
-	width: 350px;
+	width: 500px;
 	height: 350px;
 	object-fit: cover;
 	justify-content: flex-start;
@@ -106,6 +134,11 @@ body {
 
 .accordion-item{
 	border: none;
+	margin-bottom: 6px;
+}
+
+.accordion-body p {
+    margin-bottom: 0.5rem;
 }
 
 .swiper-slide img {
@@ -118,7 +151,7 @@ body {
 	width: 200px;
 	height: 200px;
 	border-radius: 50%;
-	margin: auto;
+	margin: 0 auto;
 }
 
 .restaurant_img p {
